# llm_proxy

./: .env  .gitignore  .gitmodules  Procfile  load_env_and_run.sh  plan.md  pyproject.toml  requirements.txt  run.sh  settings.py
backend/: .env  app.py  main.py  pyproject.toml  settings.py
backend/api/v1/: router.py
backend/core/: redis.py
backend/schemas/: task.py
backend/src/: main.py  settings.py
backend/src/api/v1/: router.py
backend/src/schemas/: task.py
frontend/: .env  app.py  pyproject.toml  settings.py
frontend/src/static/: main.js  style.css
frontend/src/templates/: index.html
frontend/static/: main.js  style.css
frontend/templates/: index.html
llm_worker/: .env  main.py  pyproject.toml  settings.py
llm_worker/core/: redis.py
llm_worker/src/: main.py
llm_worker/src/handlers/: generate_gp_handler.py  handlers_init.py
llm_worker/src/utils/: gp_utils.py  redis_utils.py
queue_service/: app.py  tasks_db.py
search/: tasks.py
search_engine/: search_router.py  utils.py
