[project]
name = "llm-proxy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "gevent>=25.5.1",
    "gunicorn>=23.0.0",
    "honcho>=2.0.0",
    "requests==2.32.3",
]

[dependency-groups]
dev = []
