[project]
name = "llm-proxy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "honcho>=2.0.0",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = []

[tool.uv.workspace]
members = [
    "backend",
    "search",
    "llm_worker",
    "frontend",
]
