[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "fastapi-sse>=1.1.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "redis>=6.1.0",
    "tortoise-orm[asyncpg]>=0.25.0",
    "uvicorn>=0.34.2",
]
